fix(avo-2926): switch collapsing margins around p tags to padding
https://meemoo.atlassian.net/browse/AVO-2926

--- a/src/styles/components/_content-page.scss
+++ b/src/styles/components/_content-page.scss
@@ -124,7 +124,7 @@
 	white-space: initial;
 
 	p {
-		margin: 1.5rem 0;
+		padding: 1.5rem 0;
 	}
 
 	a {
